tests/sumo/basic/tls/NEMA/errors/1/output.sumo
Loading net-file from 'net.net.xml' ... done (4ms).
Loading additional-files from 'input_additional.add.xml' ... done (1ms).
Loading additional-files from 'input_additional2.add.xml' ... done (2ms).
Loading done.
Simulation version v1_11_0+0777-b486125 started with time: 0.00
Simulation ended at time: 500.00
Reason: The final simulation step has been reached.
Performance: 
 Duration: 0.13s
 Real time factor: 3759.4
 UPS: 194398.496241
Vehicles: 
 Inserted: 422 (Loaded: 423)
 Running: 68
 Waiting: 1
Statistics (avg):
 RouteLength: 362.73
 Speed: 7.63
 Duration: 61.44
 WaitingTime: 24.62
 TimeLoss: 42.43
 DepartDelay: 0.94

